--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
+    "classnames": "^2.5.1",
     "epubjs": "^0.3.93",
     "pdfjs-dist": "^4.7.76",
     "react": "^18.3.1",
